# onboarding_chatbot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: streamlit_app.py
config/: knowledge_manifest.json
data/docs/: access_matrix.md  equipment_policy.md  hr_faq.md  hr_handbook.md  it_policy.md  it_troubleshooting.md  onboarding_guide.md  security_incident_playbook.md
eval/: README.md  evaluate_graph.py  run_eval.py  run_eval.sh
eval/results/: eval_results.json
loadtest/: README.md  run_load.py  run_load_test.sh  visualize_load_results.py
loadtest/results/: load_test_results.json
src/onboarding_agent/agent/: graph.py  state.py
src/onboarding_agent/agent/nodes/: classify_intent_node.py  compose_final_answer_node.py  escalation_node.py  rag_call_node.py  response_generation_node.py  router_node.py
src/onboarding_agent/agent/rag_subgraph/: graph.py  vectorstore.py
src/onboarding_agent/agent/rag_subgraph/nodes/: answering_node.py  retrieve_node.py  (+1 more)
src/onboarding_agent/eval/: README.md  demo_eval.py  evaluate_graph.py  questions.jsonl  run_eval.py  visualize_results.py
src/onboarding_agent/eval/results/: eval_results.json
src/onboarding_agent/loadtest/: README.md  run_load.py  run_load_test.sh  visualize_load_results.py
src/onboarding_agent/loadtest/results/: load_test_results.json
src/onboarding_agent/models/: chat.py  config.py  embeddings.py
src/onboarding_agent/rag/: ingest.py  vectorstore.py
src/onboarding_agent/rag/subgraph/: graph.py
src/onboarding_agent/tools/: ticket_tool.py
streamlit/: app.py
(+3 files in other folders)
